# wasmedge-ci-validator

./: CMakeLists.txt  README.md
docs/: design.md
include/: cli.h  scanner.h  validator.h
src/: cli.cpp  main.cpp  scanner.cpp  validator.cpp
tests/: test_ci.sh
